Fix card image spacing

--- a/_sass/_gt-theme.scss
+++ b/_sass/_gt-theme.scss
@@ -12,7 +12,7 @@ body {
     .teaser__image {
       display: inline-block;
       @include breakpoint(tablet) {
-        max-width: 200px;
+        max-width: 35%;
       }
     }
     .teaser__text {
@@ -24,10 +24,7 @@ body {
 }
 .teaser--with-image .teaser__text {
   @include breakpoint(tablet) {
-    max-width: 60%;
-  }
-  @include breakpoint(desktop) {
-    max-width: 70%;
+    max-width: 64%;
   }
 }
 
